--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -26,14 +26,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Importing Jupyter notebook from feature_generation.ipynb\n",
-      "Importing Jupyter notebook from pre_processing.ipynb\n"
+      "Importing Jupyter notebook from feature_generation_reliable.ipynb\n",
+      "Importing Jupyter notebook from pre_processing.ipynb\n",
+      "Importing Jupyter notebook from feature_generation_dangerous.ipynb\n"
      ]
     }
    ],
    "source": [
     "import nbimporter\n",
-    "import feature_generation"
+    "import feature_generation_reliable\n",
+    "import feature_generation_dangerous"
    ]
   },
   {
@@ -42,8 +44,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = feature_generation.get_features()\n",
-    "features_types = feature_generation.get_features_types()"
+    "reliable_features = feature_generation_reliable.get_features()\n",
+    "reliable_feature_types = feature_generation_reliable.get_features_types()\n",
+    "\n",
+    "dangerous_features = feature_generation_dangerous.get_features()\n",
+    "dangerous_feature_types = feature_generation_dangerous.get_features_types()"
    ]
   },
   {
@@ -73,8 +78,8 @@
     "    \"\"\"Separa df compuesto por sus primeras 240.000 filas de train.csv y sus 60.000 ultimas filas de test\n",
     "    en los dos dataframes correspondientes.\"\"\"\n",
     "    \n",
-    "    train = df.head(240000)\n",
-    "    test = df.tail(60000).drop('precio', axis=1)\n",
+    "    train = df.loc[~df['precio'].isnull()]\n",
+    "    test = df.loc[df['precio'].isnull()].drop('precio', axis=1)\n",
     "    return train, test"
    ]
   },
@@ -98,17 +103,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_featured_appended_dataset():\n",
-    "    \"\"\"Carga el .csv con los features generados, y lo formatea para ahorrar memoria. Devuelve un unico\n",
-    "    dataframe cuyas primeras 240.000 filas son de train.csv y sus ultimas 60.000 de test.\"\"\"\n",
-    "      \n",
-    "    df = load_appended_dataset()\n",
+    "def load_reliable_appended_dataset():\n",
+    "    \"\"\"Devuelve un dataframe que contiene tanto los datos de train como los de test que son considerados\n",
+    "    datos confiables.\"\"\"\n",
+    "    df = pd.read_csv('./data/confiables.csv', index_col='id', parse_dates=['fecha'])\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_dangerous_appended_dataset():\n",
+    "    \"\"\"Devuelve un dataframe que contiene tanto los datos de train como los de test que son considerados\n",
+    "    datos peligrosos.\"\"\"\n",
+    "    df = pd.read_csv('./data/peligrosos.csv', index_col='id', parse_dates=['fecha'])\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_reliable_datasets():\n",
+    "    df = load_reliable_appended_dataset()\n",
+    "    return separate_train_test(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_dangerous_datasets():\n",
+    "    df = load_dangerous_appended_dataset()\n",
+    "    return separate_train_test(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_featured_appended_reliable():\n",
+    "    df = load_reliable_appended_dataset()\n",
     "    \n",
-    "    csv_names = feature_generation.get_csvs_names()\n",
-    "    features_types = feature_generation.get_features_types()\n",
+    "    csv_names = feature_generation_reliable.get_csvs_names()\n",
+    "    features_types = feature_generation_reliable.get_features_types()\n",
     "    \n",
     "    for file in csv_names:\n",
-    "        ruta = 'features/'+file+'.csv'\n",
+    "        ruta = 'features/reliable/'+file+'.csv'\n",
     "        add = pd.read_csv(ruta, index_col='id')\n",
     "        df = pd.merge(df, add, how='left', on='id')\n",
     "           \n",
@@ -125,98 +175,7 @@
     "                df[castear] = df[castear].astype('uint16')\n",
     "            elif (tipo == 'uint32'):\n",
     "                df[castear] = df[castear].astype('uint32')\n",
-    "    \n",
     "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_featured_datasets():\n",
-    "    \"\"\"Devuelve dos datasets en el formato:\n",
-    "    train_df, test_df\n",
-    "    Para los datasets con las features generadas.\"\"\"\n",
-    "    \n",
-    "    df = load_featured_appended_dataset()\n",
-    "    return separate_train_test(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Ver el tema de dic 2016\n",
-    "En el TP1 vimos que habian muchas propiedades que eran de dic del 2016:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def aniomes(anio, mes):\n",
-    "    anio = str(anio)\n",
-    "    mes = str(mes)\n",
-    "    \n",
-    "    if len(mes)==1:\n",
-    "        mes = '0'+mes\n",
-    "    \n",
-    "    return int(anio+mes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = load_appended_dataset()"
    ]
   },
   {
@@ -225,9 +184,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['anio'] = df['fecha'].dt.year\n",
-    "df['mes'] = df['fecha'].dt.month\n",
-    "df['dia'] = df['fecha'].dt.day\n"
+    "def load_featured_appended_dangerous():\n",
+    "    df = load_dangerous_appended_dataset()\n",
+    "    \n",
+    "    csv_names = feature_generation_dangerous.get_csvs_names()\n",
+    "    features_types = feature_generation_dangerous.get_features_types()\n",
+    "    \n",
+    "    for file in csv_names:\n",
+    "        ruta = 'features/dangerous/'+file+'.csv'\n",
+    "        add = pd.read_csv(ruta, index_col='id')\n",
+    "        df = pd.merge(df, add, how='left', on='id')\n",
+    "           \n",
+    "    for categoria in features_types.keys():\n",
+    "        for tipo in features_types[categoria]:\n",
+    "            castear = features_types[categoria][tipo]\n",
+    "            if (tipo == 'bernoulli'):\n",
+    "                df[castear] = df[castear].astype('uint8')\n",
+    "            elif (tipo == 'float'):\n",
+    "                df[castear] = df[castear].astype('float')\n",
+    "            elif (tipo == 'uint8'):\n",
+    "                df[castear] = df[castear].astype('uint8')\n",
+    "            elif (tipo == 'uint16'):\n",
+    "                df[castear] = df[castear].astype('uint16')\n",
+    "            elif (tipo == 'uint32'):\n",
+    "                df[castear] = df[castear].astype('uint32')\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_featured_reliable_datasets():\n",
+    "    \n",
+    "    df = load_featured_appended_reliable()\n",
+    "    return separate_train_test(df)"
    ]
   },
   {
@@ -236,7 +229,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['aniomes'] = df.apply(lambda x: aniomes(x['anio'], x['mes']), axis=1)"
+    "def load_featured_dangerous_datasets():\n",
+    "    \n",
+    "    df = load_featured_appended_dangerous()\n",
+    "    return separate_train_test(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Separacion del dataset original en dos datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "df = load_appended_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outliers = pd.read_csv('data/outliers.csv', index_col='id')"
    ]
   },
   {
@@ -245,163 +268,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df201612 = df.loc[df['aniomes'] == 201612]"
+    "df = pd.merge(df, outliers, on='id', how='inner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2354764.7388403495"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "df201612['precio'].std()"
+    "confiables = df.loc[df['target'] == 1].drop('target', axis=1).copy()\n",
+    "peligrosos = df.loc[df['target'] == 0].drop('target', axis=1).copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "201201 - std= 1641045.1049234213 - mean= 1910287.3468586388\n",
-      "201202 - std= 1597102.887707227 - mean= 1817814.980406933\n",
-      "201203 - std= 1842065.0181309523 - mean= 1966355.1405258386\n",
-      "201204 - std= 1975269.7212173168 - mean= 2167271.0683403066\n",
-      "201205 - std= 1737103.5293206384 - mean= 1899123.956919763\n",
-      "201206 - std= 1725426.7793467424 - mean= 1930387.499343832\n",
-      "201207 - std= 1674625.858192183 - mean= 1827298.644196655\n",
-      "201208 - std= 1755932.3669465822 - mean= 2116829.444724251\n",
-      "201209 - std= 1846279.823949636 - mean= 2092779.5950731332\n",
-      "201210 - std= 1874879.4359990053 - mean= 2228156.793419804\n",
-      "201211 - std= 1877054.9610941103 - mean= 2188356.604477612\n",
-      "201212 - std= 1615653.3092376809 - mean= 1894107.711724138\n",
-      "201301 - std= 1741217.1513762006 - mean= 2032821.1996989462\n",
-      "201302 - std= 1824441.7826514642 - mean= 2158046.24910778\n",
-      "201303 - std= 1796898.6687960827 - mean= 2092787.9019607843\n",
-      "201304 - std= 1847035.049653021 - mean= 2164533.3367960635\n",
-      "201305 - std= 1807926.9052302793 - mean= 2119536.0345\n",
-      "201306 - std= 1813118.4648824409 - mean= 2058967.8501984128\n",
-      "201307 - std= 1936829.143279209 - mean= 2221330.790808241\n",
-      "201308 - std= 1893928.8491336745 - mean= 2197107.9182813815\n",
-      "201309 - std= 1848137.4916427436 - mean= 2112627.3851249623\n",
-      "201310 - std= 1901042.657614646 - mean= 2178858.7029092703\n",
-      "201311 - std= 1847531.609910109 - mean= 2082400.5453639082\n",
-      "201312 - std= 1813574.5691825936 - mean= 2075765.1900191938\n",
-      "201401 - std= 1882606.4103320858 - mean= 2194886.6475239284\n",
-      "201402 - std= 1913398.9607844383 - mean= 2327648.594711918\n",
-      "201403 - std= 1892366.6104959934 - mean= 2268508.58127572\n",
-      "201404 - std= 2043984.365707888 - mean= 2360990.835611511\n",
-      "201405 - std= 2021083.3968693428 - mean= 2312619.621621622\n",
-      "201406 - std= 1937812.891624241 - mean= 2357716.971447112\n",
-      "201407 - std= 1990907.747721154 - mean= 2358129.5952\n",
-      "201408 - std= 1927102.8074054655 - mean= 2345645.6472229976\n",
-      "201409 - std= 1998028.9289568756 - mean= 2430108.504985937\n",
-      "201410 - std= 1926790.6677943857 - mean= 2262678.244817633\n",
-      "201411 - std= 1932424.327463401 - mean= 2429326.6726642097\n",
-      "201412 - std= 2164830.9875098495 - mean= 2553107.229390681\n",
-      "201501 - std= 2073894.5842706738 - mean= 2399791.177726218\n",
-      "201502 - std= 2055027.7730512915 - mean= 2367703.882140088\n",
-      "201503 - std= 2178015.1252117073 - mean= 2602793.961334344\n",
-      "201504 - std= 2133037.4072147375 - mean= 2520665.664023262\n",
-      "201505 - std= 2136807.6714790035 - mean= 2643570.4607683984\n",
-      "201506 - std= 2231758.7432535235 - mean= 2734103.954258675\n",
-      "201507 - std= 2257854.0387533084 - mean= 2779177.462967742\n",
-      "201508 - std= 2195409.890166862 - mean= 2654494.0304904995\n",
-      "201509 - std= 2276603.73683083 - mean= 2778323.671190623\n",
-      "201510 - std= 2200963.2300631506 - mean= 2712010.1379683\n",
-      "201511 - std= 2241672.1170473127 - mean= 2744395.714838973\n",
-      "201512 - std= 2192258.720142535 - mean= 2604719.227304227\n",
-      "201601 - std= 2243295.7134038447 - mean= 2688369.6455411254\n",
-      "201602 - std= 2285987.454354529 - mean= 2695539.5287456447\n",
-      "201603 - std= 2304888.9089883 - mean= 2807389.074074074\n",
-      "201604 - std= 2252398.814379493 - mean= 2827182.8417168674\n",
-      "201605 - std= 2280586.191214795 - mean= 2726719.6596175064\n",
-      "201606 - std= 2252515.0346040907 - mean= 2744906.0999264163\n",
-      "201607 - std= 2402627.280999802 - mean= 2882329.8361882586\n",
-      "201608 - std= 2333699.194683816 - mean= 2880278.1212168243\n",
-      "201609 - std= 2411537.5296290773 - mean= 2918303.5090234443\n",
-      "201610 - std= 2315078.696041077 - mean= 2825196.1422836753\n",
-      "201611 - std= 2335328.2433011187 - mean= 2824474.0626026946\n",
-      "201612 - std= 2354764.7388403495 - mean= 2792976.583155464\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Vamos a chequear el desvio estandar de los precios para cada anio mes, para luego comparar con el std de\n",
-    "# diciembre del 2016.\n",
-    "\n",
-    "for i in range(2,7):\n",
-    "    for j in range(1,13):\n",
-    "        anio = str(i)\n",
-    "        if len(str(j)) == 1:\n",
-    "            mes = '0'+str(j)\n",
-    "        else:\n",
-    "            mes = str(j)\n",
-    "        aniomes = int('201'+anio+mes)\n",
-    "        \n",
-    "        std = df.loc[df['aniomes'] == aniomes]['precio'].std()\n",
-    "        mean = df.loc[df['aniomes'] == aniomes]['precio'].mean()\n",
-    "        print(f\"{aniomes} - std= {std} - mean= {mean}\")\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Vemos que si bien es creciente, no hay nada raro en el std del 201612."
+    "confiables.to_csv('data/confiables.csv')\n",
+    "peligrosos.to_csv('data/peligrosos.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
