Mergeados cambios a master

--- a/feature_generation.ipynb
+++ b/feature_generation.ipynb
@@ -2585,9 +2585,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4034,6 +4032,117 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Precio promedio del m^2 por ciudad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_metros_precio = df[['ciudad','metroscubiertos','precio']].copy().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precios_y_metros = df_metros_precio.groupby('ciudad').agg({\"metroscubiertos\":\"mean\",\"precio\":\"mean\"}).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precios_y_metros['mean_city_sqrm_price'] = precios_y_metros['precio'] / precios_y_metros['metroscubiertos']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precios_y_metros.drop(['metroscubiertos','precio'],axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_metros_precio = pd.merge(df_metros_precio,precios_y_metros,on='ciudad',how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_metros_precio.set_index('id',inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_metros_precio.drop(['metroscubiertos','ciudad','precio'],axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicc_metrocuadrado = {}\n",
+    "dicc_metrocuadrado_types = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicc_metrocuadrado[0] = ['mean_city_sqrm_price']\n",
+    "dicc_metrocuadrado_types['float'] = ['mean_city_sqrm_price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_metros_precio.to_csv('features/metrocuadrado.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_dicc_metrocuadrado():\n",
+    "    return {0:['mean_city_sqrm_price']}\n",
+    "def get_dicc_metrocuadrado_types():\n",
+    "    return {'float':['mean_city_sqrm_price']}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Clasificando"
    ]
   },
@@ -4720,7 +4829,7 @@
    "source": [
     "def get_csvs_names():\n",
     "    return ['metros', 'tipodepropiedad', 'provincia', 'ciudad', 'fecha', 'descripcion', 'metricas',\n",
-    "            'habitaciones', 'antiguedad', 'extras', 'volcanes', 'idzona', 'class', 'otros']"
+    "            'habitaciones', 'antiguedad', 'extras', 'volcanes', 'idzona', 'class', 'otros', 'metrocuadrado']"
    ]
   },
   {
@@ -4746,6 +4855,7 @@
     "    features['idzona'] = get_dicc_idzona()\n",
     "    features['class'] = get_dicc_class()\n",
     "    features['otros'] = get_dicc_otros()\n",
+    "    features['metrocuadrado'] = get_dicc_metrocuadrado()\n",
     "    \n",
     "    for feature in features:\n",
     "        todas = []\n",
@@ -4782,7 +4892,7 @@
     "    types['idzona'] = get_dicc_idzona_types()\n",
     "    types['class'] = get_dicc_class_types()\n",
     "    types['otros'] = get_dicc_otros_types()\n",
-    "    \n",
+    "    types['metrocuadrado'] = get_dicc_metrocuadrado_types()\n",
     "    return types"
    ]
   },
